# akama

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 1_akama.sql
src/: main.rs
src/backend/: db.rs  mod.rs  stanza.rs
src/common/: account.rs  contact.rs  event.rs  id.rs  message.rs  mod.rs
src/core/: account.rs  contact.rs  event.rs  id.rs  message.rs  mod.rs
src/screen/: mod.rs
src/screen/dashboard/: mod.rs  style.rs
src/screen/dashboard/modal/: add_account.rs  add_contact.rs  mod.rs
src/ui/: mod.rs
src/ui/screen/dashboard/: mod.rs
src/ui/screen/dashboard/modal/: add_account.rs  add_contact.rs  mod.rs
